--- a/Drum Kit/index.html
+++ b/Drum Kit/index.html
@@ -23,7 +23,7 @@
 
 
     <footer>
-        Don't look here, you idiot!
+        ba dum tss
     </footer>
     <script src="index.js"></script>
 </body>
